--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,5 +8,15 @@ services:
       - pg_data:/var/lib/postgresql/data/
     env_file:
       - .env
+    expose:
+        - "5432"
+  web:
+    build: .
+    restart: always
     ports:
-        - "54322:5432"
+      - "8000:8000"
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+    env_file:
+      - .env
+    depends_on:
+      - db
